--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0;
+  display:flex; 
+  flex-direction:column; 
+  justify-content:center;
+  flex-direction: column;
+  align-items: center;
 }
 
 section.board{
